Fixed icon spacing in button

--- a/commons/components/Button.css
+++ b/commons/components/Button.css
@@ -27,8 +27,7 @@
         cursor: pointer;
         width: 20px;
         height: 20px;
-        margin: 8px;
-        margin-right: 0;
+        margin-right: 8px;
         transition-property: stroke;
         transition-duration: var(--transition-normal);
 
